# IRCIS

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_old.md  build.sh  calc.txt  factors.txt  sample.txt
examples/: fizzbuzz.txt  num2bin.txt  num_to_binary_rev.txt  options.txt  racetrack.txt
samples/: calc.html  factors.html  hello_world.html  num_to_binary_rev.html  racetrack.html
src/: CMakeLists.txt  CharMaps.cc  CharMaps.h  DataType.cc  DataType.h  DirVec.cc  DirVec.h  Grid.cc  Grid.h  HTMLViz.cc  HTMLViz.h  HTMLVizCSS.cc  HTMLVizJS.cc  Ircis.cc  Ircis.h  Logger.cc  Logger.h  PTrain.cc  PTrain.h  Runner.cc  Runner.h  RunnerStack.cc  RunnerStack.h  main.cc
test/: CMakeLists.txt  DataTypeTest.cc  GridTest.cc  SystemTests.cc  VariableTests.cc  base64.txt  calc.txt  global_var_test.txt  local_var_multi.txt  local_var_split_test.txt  local_var_test.txt  random.txt
